[package]
name = "Intelligence_Query"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }